--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,10 +9,11 @@ jobs:
     steps:
      - checkout
      - run:
-       name: "terraform init"
+       name: terraform init
        command: |
          terraform init -input=false
+
      - run:
-       name: "terraform plan"
+       name: terraform plan
        command: |
          terraform plan
