--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: hasicorp/terraform:0.11.11
+      - image: hashicorp/terraform:0.11.11
 
     working_directory: ~/kp-infra
 
