[update] コマンドの記載をシンプルにした

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,11 +11,4 @@ jobs:
      - run: terraform workspace new dev
      - run: terraform workspace select dev
      - run: terraform init
-        name: terraform init
-        command: |
-          terraform init -input=false
-
-     - run:
-        name: terraform plan
-        command: |
-          terraform plan
+     - run: terraform plan
